# Editor-VIM

./: .evimrc  .gitignore  LICENSE  MANIFEST.in  README.md  evim  evim.py  evimlang.py.bak  evimrc.py  geninstall  pyproject.toml  test_evim.py  text.py
.evim/plugins/: autosave.py  timestamp.py  wordcount.py  zen_mode.py
packaging/alpine/: APKBUILD
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/: build-deb.sh
packaging/deb/DEBIAN/: control
packaging/flatpak/: io.github.tortr-rs.evim.json
packaging/freebsd/: Makefile
packaging/homebrew/: evim-editor.rb
packaging/nix/: default.nix
packaging/rpm/: evim-editor.spec
packaging/snap/: snapcraft.yaml
vscode-evimlang/: README.md  language-configuration.json  package.json
vscode-evimlang/syntaxes/: evimlang.tmLanguage.json
