[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evim"
version = "1.0.0"
description = "A modal CLI text editor with Vim keybindings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "tortr-rs" },
]
keywords = ["editor", "vim", "terminal", "tui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Editors",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/tortr-rs/Editor-VIM"
Repository = "https://github.com/tortr-rs/Editor-VIM"

[project.scripts]
evim = "evim:main"

[tool.setuptools]
py-modules = ["evim"]
